<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Header -->
        <TextView
            android:id="@+id/tv_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/health_care_tips"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="16dp"
            android:background="@color/accent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Health Tip 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_tip_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="16dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_1_stay_hydrated"
                    android:textSize="18sp"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:paddingTop="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drink_at_least_8_glasses_of_water_daily_to_maintain_good_health"
                    android:textSize="14sp"
                    android:textColor="@color/secondary"
                    android:paddingTop="4dp" />

                <Button
                    android:id="@+id/btn_share_tip_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_tip"
                    android:background="@drawable/button_background"
                    android:textColor="@color/white"
                    android:padding="8dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Health Tip 2 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_tip_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/card_tip_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_2_exercise_regularly"
                    android:textSize="18sp"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:paddingTop="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/engage_in_at_least_30_minutes_of_physical_activity_daily"
                    android:textSize="14sp"
                    android:textColor="@color/secondary"
                    android:paddingTop="4dp" />

                <Button
                    android:id="@+id/btn_share_tip_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_tip"
                    android:background="@drawable/button_background"
                    android:textColor="@color/white"
                    android:padding="8dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Health Tip 3 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_tip_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/card_tip_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_3_limit_unhealthy_foods_and_eat_healthy_meals"
                    android:textSize="18sp"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:paddingTop="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_not_forget_to_eat_breakfast_and_choose_a_nutritious_meal_with_more_protein_and_fiber_and_less_fat_sugar_and_calories"
                    android:textSize="14sp"
                    android:textColor="@color/secondary"
                    android:paddingTop="4dp" />

                <Button
                    android:id="@+id/btn_share_tip_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_tip"
                    android:background="@drawable/button_background"
                    android:textColor="@color/white"
                    android:padding="8dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <!-- Add more tips as needed -->
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>